# alpha-excel

./: .gitignore  CLAUDE.md  README.md  alpha-canvas-mvp.plan.md  pyproject.toml
.claude/: settings.local.json
config/: data.yaml  operators.yaml  preprocessing.yaml
docs/: new_operators_summary.md  operator_comparison.md
experiments/: FINDINGS.md  ae2_08_demean_operator.py  ae2_09_log_operator.py  ae2_10_zscore_operator.py  ae2_11_scale_operator.py  ae2_12_if_else_operator.py  ae2_13_ts_zscore_composition.py  ae2_38_set_universe.py  ae2_39_broadcast_arithmetic.py  ae2_debug_cache_inheritance.py  ae2_port_phase1_simple_ts.py  ae2_port_phase2_shift_ops.py  etl_exp_fnguide_ir_api_test.py  exp_01_config_loading.py  exp_02_datapanel_model.py  exp_03_visitor_pattern.py  exp_04_facade_integration.py  exp_05_create_mock_data.py  exp_06_duckdb_query.py  exp_07_pivot_to_xarray.py  exp_08_e2e_data_loading.py  exp_09_rolling_window.py  exp_10_refactor_pattern.py  exp_11_ts_any_rolling_boolean.py  exp_12_cs_rank_percentile.py  exp_13_universe_masking.py  exp_14_boolean_expressions.py  exp_15_data_accessor.py  exp_16_cs_quantile.py  exp_17_signal_assignment.py  exp_18_weight_scaling.py  exp_19_backtest_returns.py  exp_20_alpha_database_datasource.py  exp_21_unary_operators.py  exp_22_arithmetic_phase2_4.py  exp_23_is_nan_operator.py  exp_24_ts_rolling_aggregations.py  exp_25_ts_shift_operations.py  exp_26_ts_index_operations.py  exp_27_ts_two_input_stats.py  (+13 more)
notebooks/: alpha-excel-2-short-simplified.html  alpha-excel-2-short-simplified.ipynb  alpha-excel-2-tutorial.ipynb  alpha-excel-tutorial.ipynb  alpha-excel-tutorial.py  strategy-01-industry-peer-returns-revised.ipynb  strategy-01-industry-peer-returns-toprank-v2.ipynb
scripts/: eda_dataguide.py  eda_dataguide_funda.py  eda_dataguide_price_monthly.py  etl_dataguide.py  etl_dataguide_generalized.py  etl_fnguide_ir_events.py  etl_fnguide_returns.py  verify_dataguide_parquet.py
showcase/: 01_config_module.py  02_datapanel_model.py  03_expression_visitor.py  04_facade_complete.py  05_comparison_and_logical_operators.py  05_parquet_data_loading.py  06_ts_mean_operator.py  07_ts_any_surge_detection.py  08_rank_market_cap.py  09_universe_masking.py  10_boolean_expressions.py  11_data_accessor.py  12_cs_quantile.py  13_signal_assignment.py  14_weight_scaling.py  15_weight_caching_pnl.py  16_backtest_attribution.py  17_alpha_database_datasource.py  18_alpha_canvas_datasource_integration.py  19_expression_serialization.py  20_arithmetic_operators.py  21_ts_rolling_aggregations.py  22_ts_shift_operations.py  23_ts_index_operations.py  24_ts_two_input_stats.py  25_ts_special_stats.py  26_group_operators.py  README.md  run_all.py  (+12 more)
(+180 files in other folders)
